vagrant/ingres/test0-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test1-ingress
  namespace: test1
spec:
  rules:
  - host: test1
    http:
      paths:
      - pathType: ImplementationSpecific
        backend:
          service:
            name: test1-service
            port:
              number: 80
