vagrant/ingres/test2-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test2-ingress
  namespace: test2
spec:
  rules:
  - host: test2
    http:
      paths:
      - pathType: ImplementationSpecific
        backend:
          service:
            name: test2-service
            port:
              number: 80
